Migrate VetRepository to jOOQ